# cauchy

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: calculator.rs  calculus.rs  fractals.rs  grapher.rs  main.rs
app/src/parser/: evaluations.rs  mod.rs  symbolic.rs
